--- a/urlshortenerfrontend/src/App.css
+++ b/urlshortenerfrontend/src/App.css
@@ -3,19 +3,15 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 60vmin;
   pointer-events: none;
+  margin-top: -200px;   
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +20,64 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Instruction {
+  margin-top: -100px;  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+  min-height: 4vh;
+  display: flex;
+  gap: 8px;
+  width: fit-content;
+  margin: -150px auto;
+}
+
+.input-box {
+  border: 1px solid #444;
+  color: #8f8f8f;
+  background-color: #1e2127;
+  padding: 8px 30px;
+  border-radius: 12px;
+  outline: none;
+  font-family: 'Nunito';
+}
+
+.input-box::placeholder {
+  color: #8f8f8f;
+}
+
+.input-box:focus {
+  border-color: #0094d4;
+}
+
+.submit-btn {
+  background-color: #0094d4;
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 12px;
+  cursor: pointer;
+  font-family: 'Nunito';
+}
+
+.submit-btn:hover {
+  background-color: #00b3ff;
+}
+
+@font-face {
+  font-family: 'Nunito';
+  src: url('./assets/fonts/Nunito-Medium.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Nunito', sans-serif;
+  background-color: #282c34;
 }
