--- a/urlshortenerfrontend/src/App.css
+++ b/urlshortenerfrontend/src/App.css
@@ -1,5 +1,8 @@
 .App {
+  position: relative;
   text-align: center;
+  padding-bottom: 60px;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -8,7 +11,10 @@
   margin-top: -200px;   
 }
 
-
+body {
+  font-family: 'Nunito', sans-serif;
+  background-color: #282c34;
+}
 
 .App-header {
   min-height: 70vh;
@@ -70,6 +76,37 @@
   background-color: #00b3ff;
 }
 
+.result {
+    margin-top: 16vh;
+    color: white;
+}
+
+a:link {
+    margin-top: 16vh;
+    color: #0094d4;
+}
+
+a:visited {
+  color: #4485a1;
+}
+
+a:hover {
+  color: #0094d4;
+}
+
+a:active {
+  color: #0094d4;
+}
+
+.credits {
+  position: absolute;
+  bottom: 6%;
+  left: 50%;
+  color: #8f8f8f;
+  transform: translateX(-50%);
+
+}
+
 @font-face {
   font-family: 'Nunito';
   src: url('./assets/fonts/Nunito-Medium.ttf') format('truetype');
@@ -77,7 +114,3 @@
   font-style: normal;
 }
 
-body {
-  font-family: 'Nunito', sans-serif;
-  background-color: #282c34;
-}
